--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -1,3 +1,6 @@
+# -------------------------
+# BACKEND DEPLOYMENT
+# -------------------------
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -18,9 +21,15 @@ spec:
         ports:
         - containerPort: 5000
         env:
-        - name: MONGO_URL
+        - name: MONGO_URI
           value: mongodb://mongo-service:27017/smartphoneDB
+        - name: DELETE_CODE
+          value: "123"
+
 ---
+# -------------------------
+# BACKEND SERVICE
+# -------------------------
 apiVersion: v1
 kind: Service
 metadata:
@@ -29,6 +38,7 @@ spec:
   selector:
     app: backend
   ports:
-  - port: 5000
-    targetPort: 5000
-  type: ClusterIP
+    - port: 5000
+      targetPort: 5000
+      nodePort: 30050   # NodePort fixe
+  type: NodePort
