--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -19,7 +19,7 @@ spec:
         - containerPort: 5173
         env:
         - name: REACT_APP_API_URL
-          value: http://localhost:30050
+          value: http://backend-service:30050
       
 
 ---
