--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -40,5 +40,4 @@ spec:
   ports:
     - port: 5000
       targetPort: 5000
-      nodePort: 30050   # NodePort fixe
-  type: NodePort
+  type: ClusterIP
