--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -40,4 +40,5 @@ spec:
   ports:
     - port: 5000
       targetPort: 5000
-  type: ClusterIP
+       nodePort: 30050   # NodePort fixe pour Docker Desktop
+  type: NodePort
